data/diff_tests/wasmtime/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1261.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\94\80\80\80\00\01\02\6a\73\0d\65\78"
    "\74\65\72\6e\61\6c\5f\66\75\6e\63\00\00\03\82\80"
    "\80\80\00\01\00\0a\91\80\80\80\00\01\8b\80\80\80"
    "\00\00\03\7f\41\01\10\00\0d\00\0b\0b"
  )
""
)